feat: route GET /job-posting/:identifier
